Archivos modificados del index ya estan las imagenes faltan unos enlaces y de las memebresias falta ponerle imagenes para que no esten muy vacias.

--- a/GYM_IS/GYM/cliente/templates/cliente/index.html
+++ b/GYM_IS/GYM/cliente/templates/cliente/index.html
@@ -27,7 +27,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Sucursales</a></li>
+          <li><a href="#">Sucursales</a></li>
           <li><a href="#">Actividades</a></li>
           <li><a href=" {% url  'membresias'%} ">Membresías</a></li>
           <li><a href="#">Horarios</a></li>
@@ -102,36 +102,35 @@
 
         <!-- Marketing Icons Section -->
         <div class="row">
-          <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-              <h4 class="card-header">Card Title</h4>
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-              <h4 class="card-header">Card Title</h4>
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Learn More</a>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio4.jpg' %}" alt="...">
+              <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, esse!</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-              <h4 class="card-header">Card Title</h4>
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio5.jpg' %}" alt="...">
+              <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, esse!</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio6.jpg' %}" alt="...">
+              <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, esse!</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -142,93 +141,101 @@
         <h2>Portfolio Heading</h2>
 
         <div class="row">
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
+          <div class="col-xs-6 col-md-4">
+            <a href="#" class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio7.jpg' %}" alt="...">
+            </a>
+            <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project One</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
               </div>
-            </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
+          <div class="col-xs-6 col-md-4">
+            <a href="#" class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio8.png' %}" alt="...">
+            </a>
+            <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Two</a>
                 </h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
               </div>
-            </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
+          <div class="col-xs-6 col-md-4">
+            <a href="#" class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio8.jpg' %}" alt="...">
+            </a>
+            <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Project Three</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
               </div>
-            </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
+        </div>
+        <div class="row">
+          <div class="col-xs-6 col-md-4">
+            <a href="#" class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio9.jpg' %}" alt="...">
+            </a>
+            <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Four</a>
+                  <a href="#">Project four</a>
                 </h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
               </div>
-            </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
+          <div class="col-xs-6 col-md-4">
+            <a href="#" class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio10.jpg' %}" alt="...">
+            </a>
+            <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Five</a>
+                  <a href="#">Project Two</a>
                 </h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
               </div>
-            </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
+          <div class="col-xs-6 col-md-4">
+            <a href="#" class="thumbnail">
+              <img src="{% static 'cliente/Images/gimnasio11.jpg' %}" alt="...">
+            </a>
+            <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Six</a>
+                  <a href="#">Project Two</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
               </div>
-            </div>
           </div>
         </div>
         <!-- /.row -->
 
         <!-- Features Section -->
         <div class="row">
-          <div class="col-lg-6">
-            <h2>Modern Business Features</h2>
-            <p>The Modern Business template by Start Bootstrap includes:</p>
-            <ul>
-              <li>
-                <strong>Bootstrap v4</strong>
-              </li>
-              <li>jQuery</li>
-              <li>Font Awesome</li>
-              <li>Working contact form with validation</li>
-              <li>Unstyled page elements for easy customization</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-          </div>
-          <div class="col-lg-6">
-            <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+          <div class="col-lg-12 col-md-8">
+            <div class="media">
+              <div class="media-body">
+                <h4 class="media-heading">Modern Business Features</h4>
+                <p>The Modern Business template by Start Bootstrap includes:</p>
+                <ul>
+                  <li>
+                    <strong>Bootstrap v4</strong>
+                  </li>
+                  <li>jQuery</li>
+                  <li>Font Awesome</li>
+                  <li>Working contact form with validation</li>
+                  <li>Unstyled page elements for easy customization</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+              </div>
+              <div class="media-right">
+                <a href="#">
+                  <img class="media-object" src="{% static 'cliente/Images/ofertas.jpg' %}" alt="...">
+                </a>
+              </div>
+            </div>
           </div>
         </div>
         <!-- /.row -->
