--- a/GYM_IS/GYM/cliente/templates/cliente/cursos.html
+++ b/GYM_IS/GYM/cliente/templates/cliente/cursos.html
@@ -1,51 +1,57 @@
+{% load staticfiles %}
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>MyApp</title>
+  <title>SportWorld</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'cliente/styles.css' %} ">
 </head>
 <body>
-<nav id="navigationbar" >
-  <div class="row">
-    <div class="col-xs-12 col-sm-2 col-md-3 col-lg-3">
-      <div id="brandInit">
-        <a href=" " class="span"></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-10 col-md-9 col-lg-9" style="padding-top: 13px;">
-      <div class="row">
-        <div class="col-xs-12">
-          <div id="publicOptions">
-            <ul class="menu">
-              <li>
-                <a>Sucursales</a>
-              </li>
-              <li>
-                <a>Actividades</a>
-              </li>
-              <li>
-                <a>Membresías</a>
-              </li>
-              <li>
-                <a>Horarios</a>
-              </li>
-              <li>
-                <a>Mi Cuenta</a>
-              </li>
-              <li class="onlineshop">
-                <a class="aspecial">Compra en Linea</a>
-              </li>
+<div id="container">
+  <header>
+      <nav  class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a href=" {% url  'index'%} " class="navbar-brand">
+              <img src=" {% static 'cliente/Images/logo.svg' %}" alt="Brand"/>
+            </a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
+              <span class="sr-only">Menu</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <div class="collapse navbar-collapse" id="navbar-1">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Sucursales</a></li>
+              <li><a href="#">Actividades</a></li>
+              <li class="active"><a href="#">Membresías</a></li>
+              <li><a href="#">Horarios</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="{% url 'login' %}">Login</a>
+              <!--<li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                  Miguel Fernández <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Mi Cuenta</a></li>
+                  <li><a href="#">Mis Cursos</a></li>
+                  <li><a href="#">Mis instructores</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">Cerrar sesión</a></li>
+                </ul>
+              </li>-->
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-</nav>
-<div id="programFirstStage">
+      </nav>
+    </header>
   <div id="ProgramGrid" class="container">
     <h3 class="uppercase text-center wow fadeInRight">CURSOS</h3>
     <div class="row">
@@ -173,3 +179,13 @@ crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
+<!-- 
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="..." alt="...">
+    </a>
+  </div>
+  ...
+</div>
+-->
