--- a/GYM_IS/GYM/cliente/templates/cliente/login.html
+++ b/GYM_IS/GYM/cliente/templates/cliente/login.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MyApp</title>
+    <title>SportWorld</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href=" {% static 'cliente/styles.css' %} ">
     <link rel="stylesheet" type="text/css" href=" {% static 'cliente/formulario.css' %} ">
+    <link rel="shortcut icon" href="{% static 'cliente/Images/favicon.png' %}"/>
 </head>
 <body>
 
