--- a/GYM_IS/GYM/cliente/templates/cliente/login.html
+++ b/GYM_IS/GYM/cliente/templates/cliente/login.html
@@ -19,7 +19,7 @@
       <nav  class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a href="{% url  'index'%}" class="navbar-brand">
+            <a href="{% url  'cliente:index'%}" class="navbar-brand">
               <img src=" {% static 'cliente/Images/logo.svg' %} " alt="Brand"/>
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
@@ -33,8 +33,8 @@
           <div class="collapse navbar-collapse" id="navbar-1">
             <ul class="nav navbar-nav">
               <li><a href="#">Sucursales</a></li>
-              <li><a href="#">Actividades</a></li>
-              <li><a href=" {% url  'membresias'%} ">Membresías</a></li>
+              <li><a href="{% url  'cliente:cursos'%}">Actividades</a></li>
+              <li><a href=" {% url  'cliente:membresias'%} ">Membresías</a></li>
               <li><a href="#">Horarios</a></li>
             </ul>
           </div>
@@ -48,26 +48,36 @@
         <div class="login-html">
             <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Login</label>
             <div class="login-form">
+
+                  <!--{% if user.is_authenticated %}
+                  <p>Your account doesn't have access to this page. To proceed,
+                  please login with an account that has access.</p>
+                  {% else %}
+                  <p>Please login to see this page.</p>
+                  {% endif %}-->
                 <div class="sign-in-htm">
+                  <form role="form" method="post" action="{% url 'cliente:inicioCliente' %}">
+                    {% csrf_token %}
                     <div class="group">
-                        <label for="user" class="label">Nombre de usuario</label>
-                        <input id="user" type="text" class="input">
+                        <label for="username" class="label">Nombre de usuario</label>
+                        <input id="username" name="username" type="text" class="input">
                     </div>
                     <div class="group">
-                        <label for="pass" class="label">Contraseña</label>
-                        <input id="pass" type="password" class="input" data-type="password">
+                        <label for="password" class="label">Contraseña</label>
+                        <input id="password" name="password" type="password" class="input" data-type="password">
                     </div>
                     <div class="group">
                         <input id="check" type="checkbox" class="check" checked>
                         <label for="check"><span class="icon"></span> Mantener la sesión iniciada</label>
                     </div>
                     <div class="group">
-                        <input type="submit" class="button" value="Iniciar sesión">
+                        <input type="submit" class="button" name="login" value="Iniciar sesión">
                     </div>
                     <div class="hr"></div>
                     <div class="foot-lnk">
                         <a href="#forgot">¿Olvido la contraseña?</a>
                     </div>
+                  </form>
                 </div>
             </div>
         </div>
