--- a/GYM_IS/GYM/cliente/templates/cliente/inicioCliente.html
+++ b/GYM_IS/GYM/cliente/templates/cliente/inicioCliente.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,7 +7,8 @@
     <title>MyApp</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href=" {% static 'cliente/styles.css' %} ">
+    <link rel="stylesheet" type="text/css" href="{% static 'cliente/Images/favicon.png' %}">
 </head>
 <body>
 	<div class="container">
@@ -14,8 +16,8 @@
 			<nav  class="navbar navbar-default navbar-fixed-top">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<a href="#" class="navbar-brand">
-							<img src="CSS/Images/logo.svg" alt="Brand"/>
+						<a href="{% url  'cliente:index'%}" class="navbar-brand">
+							<img src="{% static 'cliente/Images/logo.svg' %}" alt="Brand"/>
 						</a>
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
 							<span class="sr-only">Menu</span>
@@ -28,15 +30,15 @@
 					<div class="collapse navbar-collapse" id="navbar-1">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Sucursales</a></li>
-							<li><a href="#">Actividades</a></li>
-							<li><a href="#">Membresías</a></li>
+							<li><a href="{% url  'cliente:cursos'%}">Actividades</a></li>
+							<li><a href="{% url  'cliente:membresias'%}">Membresías</a></li>
 							<li><a href="#">Horarios</a></li>
 						</ul>
 
 						<ul class="nav navbar-nav navbar-right">
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-									Miguel Fernández <span class="caret"></span>
+									{{user.username}} <span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
 									<li><a href="#">Mi Cuenta</a></li>
@@ -57,8 +59,8 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<img src="CSS/Images/profile.png" alt="Perfil">
-					<h3>Miguel Fernández</h3>
+					<img src="{% static 'cliente/Images/profile.png' %}" alt="Perfil">
+					<h3>{{full_name }}</h3>
 				</div>
 				<div class="col-md-8">
 					<div class="col-md-12" style="border-width: 1px 1px 0px 1px; border-style: solid; border-color: lightgrey;">
